# git-mentor

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  publish.yml
apps/space/: Dockerfile  README.md  package.json
apps/space/src/: server.ts
docs/: huggingface.md
docs/superpowers/specs/: 2026-06-03-git-local-mcp-design.md  2026-06-03-github-account-write-design.md
eval/: README.md
scripts/: compare-llm-first.mjs  postinstall.mjs  run-all-chat-commands.mjs
space/: README.md  app.py  requirements.txt
src/git_mentor/agents/: coach.py  growth.py  pipeline.py  profile.py
src/git_mentor/cli/: main.py
src/git_mentor/core/: config.py  schemas.py
src/git_mentor/core/profiles/: roles.py
src/git_mentor/core/signals/: engine.py
src/git_mentor/eval/: benchmark.py
src/git_mentor/eval/datasets/: synthetic_profiles.json
src/git_mentor/export/: markdown.py
src/git_mentor/github/: client.py  ingestor.py
src/git_mentor/llm/: router.py
src/git_mentor/llm/providers/: base.py  deterministic.py  ollama.py  openai_compatible.py
src/git_mentor/mcp/: server.py
tests/: test_benchmark.py  test_roles.py  test_signals.py
