[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-mentor"
version = "0.1.0"
description = "Evidence-backed GitHub career intelligence — CLI, MCP, local-first."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "git-mentor contributors" }]
keywords = ["github", "ai", "agents", "mcp", "career", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "platformdirs>=4.2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]
space = ["gradio>=4.44.0"]

[project.scripts]
git-mentor = "git_mentor.cli.main:app"

[project.urls]
Homepage = "https://github.com/git-mentor/git-mentor"
Documentation = "https://github.com/git-mentor/git-mentor#readme"
"Hugging Face Space" = "https://huggingface.co/spaces/git-mentor/demo"

[tool.hatch.build.targets.wheel]
packages = ["src/git_mentor"]

[tool.hatch.build.targets.wheel.force-include]
"src/git_mentor/eval/datasets" = "git_mentor/eval/datasets"

[tool.hatch.build.targets.sdist]
include = ["src/git_mentor", "README.md", "LICENSE", "ARCHITECTURE.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
